nsg.tf
resource "azurerm_network_security_group" "inbound-web" {
  name                = "inbound-web"
  location            = var.location
  resource_group_name = azurerm_resource_group.infra.name
}

resource "azurerm_network_security_rule" "web-80" {
  name                        = "web-80"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "80"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.infra.name
  network_security_group_name = azurerm_network_security_group.inbound-web.name
}

resource "azurerm_network_security_rule" "web-443" {
  name                        = "web-443"
  priority                    = 101
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "443"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.infra.name
  network_security_group_name = azurerm_network_security_group.inbound-web.name
}

resource "azurerm_subnet_network_security_group_association" "web-subnet" {
  subnet_id                 = azurerm_subnet.infra.id
  network_security_group_id = azurerm_network_security_group.inbound-web.id

}
